--- a/plugin.xml
+++ b/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-        id="com.rareloop.cordova.appversion" version="1.0.0">
+        id="cordova-plugin-appversion" version="1.0.0">
     <name>App Version</name>
     <description>Expose the native app version to JavaScript</description>
     <license>MIT</license>
