--- a/plugin.xml
+++ b/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-        id="cordova-plugin-appversion" version="1.0.0">
+        id="cordova-plugin-appversion" version="1.0.1">
     <name>App Version</name>
     <description>Expose the native app version to JavaScript</description>
     <license>MIT</license>
@@ -25,5 +25,11 @@
             </feature>
         </config-file>
         <source-file src="src/android/RareloopAppVersion.java" target-dir="src/com/rareloop/cordova/appversion" />
+    </platform>
+    
+    <platform name="windows">
+        <js-module src="src/windows/RareloopAppVersion.js"  name="RareloopAppVersionProxy">
+            <merges target="" />
+        </js-module>
     </platform>
 </plugin>
