--- a/plugin.xml
+++ b/plugin.xml
@@ -19,7 +19,7 @@
     </platform>
 
     <platform name="android">
-        <config-file target="config.xml" parent="/*">
+        <config-file target="res/xml/config.xml" parent="/*">
             <feature name="RareloopAppVersion">
                 <param name="android-package" value="com.rareloop.cordova.appversion.RareloopAppVersion"/>
             </feature>
